# lenia

./: .gitignore  Cargo.toml  README.md  Soliton_parameters.txt
src/: fft.rs  keyboardhandler.rs  lenia.rs  main.rs  seeders.rs
src/lenia_ca/: fft.rs  growth_functions.rs  kernels.rs  lenias.rs  mod.rs  seeders.rs
