[package]
name = "lenia_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
rustfft = "6.1.0"
num-complex = "0.4.2"
pixel-canvas = "0.2.3"
glium = "*"
probability = "0.20.3"
rand = "0.8.5"

[profile.release]
debug = 1