[package]
name = "lenia_simulator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lenia_ca = "0.1.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
rustfft = "6.1.0"
num-complex = "0.4.2"
pixel-canvas = "0.2.3"
glium = "*"
probability = "0.20.3"
rand = "0.8.5"
png = "0.17.7"
rayon = "1.7.0"

#[profile.release]
#debug = 2